# tasks

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.py  test.db
src/common/: dependencies.py  pagination.py
src/core/: config.py  logging.py
src/db/: models.py  session.py
src/db/alembic/: env.py
src/db/alembic/versions/: 16c9e31a5699_add_initial_migration.py
src/modules/auth/: dependencies.py  repository.py  router.py  service.py
src/modules/tasks/: dependencies.py  dto.py  model.py  repository.py  router.py  schema.py  service.py
src/modules/users/: dependencies.py  dto.py  model.py  repository.py  router.py  service.py
src/tests/unit/: conftest.py
src/tests/unit/auth/: test_auth_invalid_data.py  test_auth_valid_operations.py
src/tests/unit/tasks/: conftest.py  test_invalid_data.py  test_task.py  test_tasks_invalid_data.py  test_tasks_unauthenticated_operations.py  test_tasks_valid_operations.py  test_unauthenticated_operations.py  test_valid_operations.py
src/tests/unit/users/: test_users_invalid_data.py  test_users_valid_operations.py
